# BNumbers

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: lint_test.yml
app/: cli.py  exceptions.py  process.py  tests.py
tests/: test_cli.py  test_process.py
