[tool.poetry]
name = "buildnumbers"
version = "0.1.0"
description = ""
authors = ["Johnatas <johnatasr@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
black = "^23.12.0"
pytest = "^7.4.3"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
